# vibe-scanner

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
scans/: _browser.py  _gliner.py  _target_map.py  vibe_code.py  vibe_scan_cli.py
server/: package.json  server.js
server/public/: vibe-scan.html
utils/: secrets.py
